JS: 조이스틱 완성

--- a/JoyStick/style/joy-stick.css
+++ b/JoyStick/style/joy-stick.css
@@ -20,3 +20,15 @@ body {
     no-repeat;
   z-index: 10;
 }
+
+
+.stick-field{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  translate:-50% -50%;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  border: 1px solid white;
+}
